update Text Pre Processing

--- a/Text_Pre_Processing.ipynb
+++ b/Text_Pre_Processing.ipynb
@@ -147,9 +147,9 @@
     "stop = set(stopwords.words('english'))\n",
     "filtred_doc=[]\n",
     "\n",
-    "for d in doc:\n",
-    "    if d not in stop:\n",
-    "        filtred_doc.append(d)\n",
+    "for w in words:\n",
+    "    if w not in stop:\n",
+    "        filtred_doc.append(w)\n",
     "\n",
     "print(doc)\n",
     "print(filtred_doc)\n",
