--- a/Text_Pre_Processing.ipynb
+++ b/Text_Pre_Processing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi ! my name is Natural Language Pre Processing. And you ?\n"
+      "Hi my name is Natural Language Processing. And you ?\n"
      ]
     }
    ],
@@ -47,7 +47,6 @@
     "import string\n",
     "\n",
     "import nltk\n",
-    "\n",
     "import spacy\n",
     "import en_core_web_sm\n",
     "\n",
@@ -56,20 +55,19 @@
     "from nltk.corpus import stopwords\n",
     "nltk.download('stopwords')\n",
     "\n",
-    "\n",
     "request=input()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hi !', 'my name is natural language pre processing.', 'and you ?']\n"
+      "['hi my name is natural language processing.', 'and you ?']\n"
      ]
     }
    ],
@@ -84,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hi', '!', 'my', 'name', 'is', 'natural', 'language', 'pre', 'processing', '.', 'and', 'you', '?']\n"
+      "['hi', 'my', 'name', 'is', 'natural', 'language', 'processing', '.', 'and', 'you', '?']\n"
      ]
     }
    ],
@@ -104,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['INTJ', 'PUNCT', 'DET', 'NOUN', 'AUX', 'ADJ', 'NOUN', 'ADJ', 'NOUN', 'PUNCT', 'CCONJ', 'PRON', 'PUNCT']\n"
+      "[[hi, 'INTJ'], [my, 'DET'], [name, 'NOUN'], [is, 'AUX'], [natural, 'ADJ'], [language, 'NOUN'], [processing, 'NOUN'], [., 'PUNCT'], [and, 'CCONJ'], [you, 'PRON'], [?, 'PUNCT']]\n"
      ]
     }
    ],
@@ -122,22 +120,24 @@
     "part_of_speech=[]\n",
     "\n",
     "for d in doc:\n",
-    "    part_of_speech.append(d.pos_)\n",
+    "    part_of_speech.append([d,d.pos_])\n",
     "\n",
     "print(part_of_speech)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hi ! my name is natural language pre processing. and you ?\n",
-      "[hi, !, my, name, is, natural, language, pre, processing, ., and, you, ?]\n"
+      "hi my name is natural language processing. and you ?\n",
+      "['hi', 'name', 'natural', 'language', 'processing', '.', '?']\n"
      ]
     }
    ],
@@ -147,13 +147,12 @@
     "stop = set(stopwords.words('english'))\n",
     "filtred_doc=[]\n",
     "\n",
-    "for w in words:\n",
-    "    if w not in stop:\n",
-    "        filtred_doc.append(w)\n",
+    "for d in words:\n",
+    "    if d not in stop:\n",
+    "        filtred_doc.append(d)\n",
     "\n",
     "print(doc)\n",
-    "print(filtred_doc)\n",
-    "        \n"
+    "print(filtred_doc)"
    ]
   },
   {
@@ -183,13 +182,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
